Search functionality done
